noticed a werid bug, delay on project flipcards and backside are visible even with back side hidden in css. when viewed on cell phone on heroku it doesnt seem to be a problem

--- a/src/styles/_aboutStyle.scss
+++ b/src/styles/_aboutStyle.scss
@@ -1,4 +1,4 @@
 .about {
-//  background: lightgray;
- margin-top: 10em;
+margin: 1em;
+margin-top: 10em;
 }
