--- a/src/styles/_contactStyle.scss
+++ b/src/styles/_contactStyle.scss
@@ -58,3 +58,11 @@
   height: 2em;
   border: none;
 }
+
+.contact-form {
+  position: absolute;
+  top: 200em;
+  width: 100%;
+  
+
+}
